--- a/static/less/pages/course/pages.less
+++ b/static/less/pages/course/pages.less
@@ -46,5 +46,13 @@
                 margin: 0;
             }
         }
+
+        .call-to-action {
+            .text-center();
+
+            a {
+                .ionisx-btn(@white, @color-success);
+            }
+        }
     }
 }
