--- a/templates/theme-footer.html
+++ b/templates/theme-footer.html
@@ -5,43 +5,39 @@
 
 <footer>
   <div class="footer-container">
-    <nav class="nav">
-      <ul>
-        %if settings.MKTG_URL_LINK_MAP.get('ABOUT'):
-        <li>
-          <a id="about" href="${marketing_link('ABOUT')}">${_("About")}</a>
-        </li>
-        %endif
-        %if settings.MKTG_URL_LINK_MAP.get('FAQ'):
-        <li>
-          <a id="faq" href="${marketing_link('FAQ')}">${_("FAQ")}</a>
-        </li>
-        %endif
-        %if settings.MKTG_URL_LINK_MAP.get('CONTACT'):
-        <li>
-          <a id="contact" href="${marketing_link('CONTACT')}">${_("Contact")}</a>
-        </li>
-        %endif
-        %if settings.MKTG_URL_LINK_MAP.get('TOS'):
-        <li>
-          <a href="${marketing_link('TOS')}">${_("Terms of Service")}</a>
-        </li>
-        %endif
-        %if settings.MKTG_URL_LINK_MAP.get('HONOR'):
-        <li>
-          <a href="${marketing_link('HONOR')}">${_("Honor Code")}</a>
-        </li>
-        %endif
-        %if settings.MKTG_URL_LINK_MAP.get('PRIVACY'):
-        <li>
-          <a href="${marketing_link('PRIVACY')}">${_("Privacy Policy")}</a>
-        </li>
-        %endif
-      </ul>
-    </nav>
-    <div>
-      <p class="copyright">${_(u"© 2014 {platform_name}, some rights reserved.").format(platform_name=platform_name())}</p>
-    </div>
+    <ul class="links">
+      %if settings.MKTG_URL_LINK_MAP.get('ABOUT'):
+      <li>
+        <a id="about" href="${marketing_link('ABOUT')}">${_("About")}</a>
+      </li>
+      %endif
+      %if settings.MKTG_URL_LINK_MAP.get('FAQ'):
+      <li>
+        <a id="faq" href="${marketing_link('FAQ')}">${_("FAQ")}</a>
+      </li>
+      %endif
+      %if settings.MKTG_URL_LINK_MAP.get('CONTACT'):
+      <li>
+        <a id="contact" href="${marketing_link('CONTACT')}">${_("Contact")}</a>
+      </li>
+      %endif
+      %if settings.MKTG_URL_LINK_MAP.get('TOS'):
+      <li>
+        <a href="${marketing_link('TOS')}">${_("Terms of Service")}</a>
+      </li>
+      %endif
+      %if settings.MKTG_URL_LINK_MAP.get('HONOR'):
+      <li>
+        <a href="${marketing_link('HONOR')}">${_("Honor Code")}</a>
+      </li>
+      %endif
+      %if settings.MKTG_URL_LINK_MAP.get('PRIVACY'):
+      <li>
+        <a href="${marketing_link('PRIVACY')}">${_("Privacy Policy")}</a>
+      </li>
+      %endif
+    </ul>
+    <p class="copyright">${_(u"© 2015 {platform_name}, some rights reserved.").format(platform_name=platform_name())}</p>
     <div class="by-ionisx">
       <a href="https://ionisx.com">
         <img src="${static.url('themes/{theme_name}/images/logo-x-white.png'.format(theme_name=settings.THEME_NAME))}" alt="Theme by IONISx">
