--- a/static/less/mixins/modal.less
+++ b/static/less/mixins/modal.less
@@ -47,6 +47,7 @@
             margin: 0 0 2em 0;
             padding: 0;
             text-align: center;
+            overflow: visible;
 
             &:before {
                 background: none;
