Remove non-ASCII characters
Fix #40

--- a/static/less/variables.less
+++ b/static/less/variables.less
@@ -5,9 +5,9 @@
 @fa-font-path: '../fonts/font-awesome';
 
 // This overrides Glyphicons paths in Bootstrap:
-// It is rather hacky since the fonts don’t share the same characters.
-// But it will fix a few errors trying to fetch fonts that don’t exist.
-// (we don’t want glyphicons)
+// It is rather hacky since the fonts don't share the same characters.
+// But it will fix a few errors trying to fetch fonts that don't exist.
+// (we don't want glyphicons)
 @icon-font-path: '../fonts/font-awesome/';
 @icon-font-name: 'fontawesome-webfont';
 @icon-font-svg-id: 'fontawesomeregular';
