--- a/static/less/global/footer.less
+++ b/static/less/global/footer.less
@@ -21,7 +21,7 @@ footer {
             margin: 0 5px 0 0;
 
             &:after {
-                content: '•';
+                content: '\2022';
                 padding: 0 0 0 5px;
             }
 
