Custom footer styles should only apply to global footer.
Cypress uses <footer> elements in places other than the global site footer,
for example in course listings.

The custom styles from src/less/global/footer.less should only apply to the
global footer. Use a 'global' class to distinguish the global footer from the
other <footer> elements.

--- a/templates/theme-footer.html
+++ b/templates/theme-footer.html
@@ -3,7 +3,7 @@
 <%! from microsite_configuration.templatetags.microsite import platform_name %>
 <%namespace name='static' file='static_content.html'/>
 
-<footer>
+<footer class="global">
   <div class="footer-container">
     <ul class="links">
       %if settings.MKTG_URL_LINK_MAP.get('ABOUT'):
