Use more specific CSS selectors for course styles.
The specificity of CSS course style selectors has changed in Cypress
and the custom theme styles no longer took precedence.

Wrap the course styles in body.view-incourse to match (and take precedence over)
the selectors in edx-platform CSS.

--- a/src/less/pages/main.less
+++ b/src/less/pages/main.less
@@ -123,8 +123,6 @@ body,
         }
     }
 
-    @import 'course/main.less';
-
     @import 'static.less';
     @import 'error.less';
 
@@ -136,4 +134,8 @@ body,
     @import 'login.less';
     @import 'password-reset.less';
     @import 'activation.less';
+}
+
+body.view-incourse .content-wrapper {
+    @import 'course/main.less';
 }
