Update dashboard sidebox styles.
The sidebox was moved from left to the right In Cypress and the content has changed.
Adjust the styles accordingly.

--- a/src/less/pages/dashboard.less
+++ b/src/less/pages/dashboard.less
@@ -14,9 +14,10 @@
         .make-lg-column(3);
 
         background: none;
+        border: 0 none;
         box-shadow: none;
-        padding-left: 0;
-        margin: 0;
+        margin: 60px 0 0;
+        padding: 15px;
 
         .profile {
             display: none;
